docker/prod/prod.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-prod
  namespace: prod
  labels:
    app: mediawiki-prod
    type: mediawiki
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  replicas: ${PODS}
  progressDeadlineSeconds: 180
  selector:
    matchLabels:
      app: mediawiki-prod
  template:
    metadata:
      labels:
        app: mediawiki-prod
        app_version: "${APP_VERSION}"
        config_version: "${CONFIG_VERSION}"
    spec:
      dnsConfig:
        options:
        - name: timeout
          value: "1"
      containers:
        - name: nginx
          image: artifactory.wikia-inc.com/sus/mediawiki-prod-nginx:${IMAGE_TAG}
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 3
          livenessProbe:
            httpGet:
              path: /health/check
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8080
            timeoutSeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
            - containerPort: 4040
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 50Mi
        - name: php
          image: artifactory.wikia-inc.com/sus/mediawiki-php:${IMAGE_TAG}
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 3
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 9000
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 5
              memory: 5Gi  # 20 fpm workers x 200MB PHP memory limit
            requests:
              cpu: 1
              memory: 1.4Gi
        - name: fpm-prometheus-exporter
          image: hipages/php-fpm_exporter:1.0.0
          ports:
            - containerPort: 9253
          resources:
            limits:
              cpu: 50m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 50Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-prod
  labels:
    app: mediawiki-prod
spec:
  selector:
    app: mediawiki-prod
  ports:
    - protocol: TCP
      port: 80
      name: main
      targetPort: 8080
    - protocol: TCP
      port: 9253
      name: metrics
      targetPort: 9253
    - protocol: TCP
      port: 4040
      name: vtsmetrics
      targetPort: 4040
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mediawiki-prod-ingress
  labels:
    app: mediawiki-prod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: kubernetes.wikia.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mediawiki-prod
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-tasks
  namespace: prod
  labels:
    app: mediawiki-tasks
    type: mediawiki
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  progressDeadlineSeconds: 180
  selector:
    matchLabels:
      app: mediawiki-tasks
  template:
    metadata:
      labels:
        app: mediawiki-tasks
        app_version: "${APP_VERSION}"
        config_version: "${CONFIG_VERSION}"
    spec:
      dnsConfig:
        options:
        - name: timeout
          value: "1"
      containers:
        - name: nginx
          image: artifactory.wikia-inc.com/sus/mediawiki-prod-nginx:${IMAGE_TAG}
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 50Mi
        - name: php
          image: artifactory.wikia-inc.com/sus/mediawiki-php:${IMAGE_TAG}
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 9000
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 5
              memory: 5Gi  # 20 fpm workers x 200MB PHP memory limit
            requests:
              cpu: 1.5
              memory: 1.4Gi
        - name: fpm-prometheus-exporter
          image: hipages/php-fpm_exporter:1.0.0
          ports:
            - containerPort: 9253
          resources:
            limits:
              cpu: 1
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 50Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-tasks
  labels:
      app: mediawiki-tasks
spec:
  selector:
    app: mediawiki-tasks
  ports:
    - protocol: TCP
      port: 80
      name: main
      targetPort: 8080
    - protocol: TCP
      port: 9253
      name: metrics
      targetPort: 9253
